--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,12 @@
             <version>3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.mongojack</groupId>
+            <groupId>org.databene</groupId>
+            <artifactId>contiperf</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+        <dependency>
+        <groupId>org.mongojack</groupId>
             <artifactId>mongojack</artifactId>
             <version>2.1.0</version>
             <exclusions>
